--- a/public/_assets/css/style.css
+++ b/public/_assets/css/style.css
@@ -1,1 +1,11 @@
-
+.note-wrapper {
+	padding: 15px;
+	margin: 5px 0 5px 0;
+	background-color: #DDDDDD;
+}
+.note-name {
+	text-decoration: underline;
+}
+.note-msg {
+	color: gray;
+}
